# elm-reactor

./: .gitignore  .gitmodules  ICON-LICENSE  Index.hs  README.md  Server.hs  Setup.hs  build-from-source.md  cabal-build.py  debugger.html  debugger.js  debuggerInterface.elm  elm-package.json  elm-reactor.cabal  elm-server.cabal  last-modified
assets/: debug-core.js  debugger-interface-elm-server.html  debugger.js  debuggerInterface.js  elm-debugger.html  styles.css  toString.js
assets/_reactor/: core.js  debuggerInterface.js  reactor.js  toString.js
assets/js/: core.js
backend/: Compile.hs  Index.hs  Main.hs  Socket.hs  StaticFiles.hs  Utils.hs
backend/Generate/: Help.hs  Index.hs
backend/StaticFiles/: Build.hs
frontend/: ActionLog.elm  Button.elm  Components  Components.elm  Controls.elm  DataUtils.elm  Debugger.elm  ElmValueView.elm  Index.elm  JsArray.elm  Logs.elm  Model.elm  NotFound.elm  Overlay.elm  OverlayModel.elm  Reactor.elm  SessionRecord.elm  SideBar.elm  Slider.elm  Styles.elm  TreeView.elm  Util.elm  Watches.elm  WebSocket.elm  core.js  debug-agent.js  debug-interface.html  debug.js  debugger-implementation.js  debuggerInterface.elm  elm-package.json  elm_dependencies.json  reactor.js  toString.js  watches.elm
frontend/Debugger/: Active.elm  Model.elm  Reflect.elm  RuntimeApi.elm  Service.elm
frontend/Explorer/: Logs.elm
frontend/Explorer/Value/: TreeView.elm
frontend/Native/: Components.js  JsArray.js  Slider.js  WebSocket.js
frontend/Native/Debugger/: Reflect.js  RuntimeApi.js  SessionRecord.js
frontend/SideBar/: ActionLog.elm  Controls.elm  Logs.elm  Model.elm  Watches.elm
man/: elm-server.1
resources/: Error404.elm  docs.json
resources/debugger/: elm-debugger.html
resources/misc/: editor.js
server/: Debugger.hs  Editor.hs  Generate.hs  Index.hs  Server.hs  Socket.hs  Utils.hs
slider/: Slider.elm  debuggerInterface.elm  sliderInterface.elm  watchesInterface.elm
slider/Native/: Slider.js
src/backend/: Compile.hs  Main.hs  Socket.hs  StaticFiles.hs
src/backend/Generate/: Help.hs  Index.hs  NotFound.hs
src/backend/StaticFiles/: Build.hs
src/debugger/: Debugger.elm  History.elm  Main.elm  Model.elm  UserProgram.elm  debug-agent.js  debug-interface.html  debugger-footer.js  notes.md
src/debugger/Debugger/: Active.elm  Model.elm  Reflect.elm  RuntimeApi.elm  Service.elm
src/debugger/Debugger/Model/: Log.elm
src/debugger/Explorer/: Logs.elm  MainPanel.elm
src/debugger/Explorer/Value/: ElmValueView.elm  Expando.elm  FromJs.elm  Test.elm  TreeView.elm
src/debugger/Native/: Cast.js  JsArray.js
src/debugger/Native/Debugger/: Reflect.js  RuntimeApi.js
src/debugger/SideBar/: ActionLog.elm  Button.elm  Controls.elm  Footer.elm
src/debugger/Utils/: Helpers.elm  JsArray.elm  Style.elm
src/pages/: Errors.elm  Index.elm  NotFound.elm  Start.elm  TempFontAwesome.elm
src/pages/Index/: Dashboard.elm  Icon.elm  Navigator.elm  Project.elm  Skeleton.elm
