Name: elm-reactor
Version: 0.17.1


Synopsis:
  Interactive development tool for Elm programs

Description:
  Provides an interactive development tool that makes it easy
  to develop and debug Elm programs. It will automatically
  compile any Elm program—independent of editor. It permits
  hot-swapping and time-traveling debugging.


Homepage:
  http://elm-lang.org


License: BSD3
License-file: LICENSE


Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright: (c) 2011-present Evan Czaplicki


Category:
  Compiler, Language

Build-type: Simple
Extra-source-files:  README.md
Cabal-version:       >=1.8


source-repository head
  type:     git
  location: git://github.com/elm-lang/elm-reactor.git


Executable elm-reactor
  ghc-options:
    -threaded -O2 -W

  hs-source-dirs:
    src/backend

  Main-is:
    Main.hs

  other-modules:
    Compile,
    Generate.Help,
    Generate.Index,
    Generate.NotFound,
    Socket,
    StaticFiles,
    StaticFiles.Build

  Build-depends:
    aeson >= 0.7,
    base >=4.2 && <5,
    blaze-html,
    blaze-markup,
    utf8-string,
    bytestring,
    cmdargs,
    containers,
    directory >= 1.2,
    elm-compiler == 0.17.1,
    elm-package,
    file-embed,
    filepath,
    fsnotify >= 0.2,
    mtl,
    process,
    snap-core,
    snap-server,
    template-haskell,
    text,
    time,
    transformers,
    unordered-containers,
    websockets >= 0.9 && < 0.10,
    websockets-snap >= 0.8.2.1
