Name:                elm-server
Version:             0.11.0.1
Synopsis:            Server for developing Elm projects
Description:         Provides a standalone Snap server that serves static files.
                     For Elm files, it recompiles them and serves them as HTML,
                     so you can just refresh to see the new version.

Homepage:            http://elm-lang.org

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2011-2014 Evan Czaplicki

Category:            Compiler, Language

Build-type:          Custom

Data-dir:            assets
Data-files:          debuggerInterface.js
                     debugger.js
                     toString.js
                     debug-wrench-elm-server.png
                     favicon.ico
                     debugger/reactor-pause-button-up.png
                     debugger/reactor-pause-button-down.png
                     debugger/reactor-pause-button-hover.png
                     debugger/reactor-play-button-up.png
                     debugger/reactor-play-button-down.png
                     debugger/reactor-play-button-hover.png
                     debugger/reactor-restart-button-up.png
                     debugger/reactor-restart-button-down.png
                     debugger/reactor-restart-button-hover.png

Extra-source-files:  README.md
Cabal-version:       >=1.8

source-repository head
  type:     git
  location: git://github.com/elm-lang/elm-server.git

Executable elm-server
  Main-is:             Server.hs
  other-modules:       Index
  Build-depends:       base >=4.2 && <5,
                       blaze-html,
                       blaze-markup,
                       bytestring,
                       cmdargs,
                       containers >= 0.3,
                       directory,
                       Elm >= 0.12.3,
                       filepath,
                       fsnotify >= 0.1.0.2,
                       HTTP,
                       mtl,
                       process,
                       old-locale,
                       snap-core,
                       snap-server,
                       split,
                       system-filepath,
                       time,
                       transformers,
                       unordered-containers,
                       websockets >= 0.8.2.5,
                       websockets-snap >= 0.8.2.1
  
  hs-source-dirs:      server
